RESOLVED FIXED210547
[iOS] Potential crash under WebProcess::platformInitializeWebProcess
https://bugs.webkit.org/show_bug.cgi?id=210547
Summary [iOS] Potential crash under WebProcess::platformInitializeWebProcess
Per Arne Vollan
Reported 2020-04-15 07:39:44 PDT
If the UI process fails to issue an extension to the runningboard service, the WebContent process will crash while trying to consume this extension.
Attachments
Patch (3.90 KB, patch)
2020-04-15 07:43 PDT, Per Arne Vollan
no flags
Radar WebKit Bug Importer
Comment 1 2020-04-15 07:40:00 PDT
Per Arne Vollan
Comment 2 2020-04-15 07:43:37 PDT
Brent Fulgham
Comment 3 2020-04-15 09:27:55 PDT
Comment on attachment 396531 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=396531&action=review > Source/WebKit/ChangeLog:9 > + while trying to consume this extension. I think we have this same problem with mapdb. Could we do the same thing there?
Per Arne Vollan
Comment 4 2020-04-15 10:18:26 PDT
(In reply to Brent Fulgham from comment #3) > Comment on attachment 396531 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=396531&action=review > > > Source/WebKit/ChangeLog:9 > > + while trying to consume this extension. > > I think we have this same problem with mapdb. Could we do the same thing > there? The mapdb issue have already been fixed. Thanks for reviewing!
EWS
Comment 5 2020-04-15 10:22:05 PDT
Committed r260137: <https://trac.webkit.org/changeset/260137> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396531 [details].
Note You need to log in before you can comment on or make changes to this bug.