[iOS] Potential crash under WebProcess::platformInitializeWebProcess https://bugs.webkit.org/show_bug.cgi?id=210547

Reviewed by Brent Fulgham.

If the UI process fails to issue an extension to the runningboard service, the WebContent process will crash
while trying to consume this extension.

No new tests, since the test runners are unsandboxed, so issuing the extension will always succeed.

* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess):
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeWebProcess):


Canonical link: https://commits.webkit.org/223428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260137 268f45cc-cd09-0410-ab3c-d52691b4dbfc